<resources>
    <string name="app_name">Music Player</string>
    <string name="ttf_1">&#xF0009;</string>
    <string name="ttf_password">&#xF07F5;</string>
    <string name="ttf_login">&#xF05FC; 登入</string>
    <string name="btnFront">&#xF04AE;</string>
    <string name="btnStop">&#xF04DB;</string>
    <string name="btnPlay">&#xF040A;</string>
    <string name="btnPause">&#xF03E4;</string>
    <string name="btnNext">&#xF04AD;</string>
    <string name="btnEnd">&#xF1398;</string>
    <string name="btnexit">&#xF05FD; 離開</string>
    <string name="btnRegister">&#xF0014; 註冊</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
