<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txtAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/ttf_1"/>

            <EditText
                android:id="@+id/edtAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="請輸入你的帳號"
                android:layout_weight="2"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/ttf_password"
                 />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="請輸入你的密碼"
                android:inputType="textPassword"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape01_radius"
                android:text="@string/ttf_login"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnexit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape01_radius"
                android:text="@string/btnexit"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape01_radius"
                android:text="@string/btnRegister"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>